[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eval = "0.4.3"
grid = "0.9.0"
hashbrown = "0.13.1"
itertools = "0.10.5"
json = "0.12.4"
range_union_find = "0.4.3"
regex = "1.7.0"
rustc-hash = "1.1.0"
sscanf = "0.4.0"
text_io = "0.1.12"
